--- a/package.json
+++ b/package.json
@@ -18,6 +18,21 @@
     "@types/react-dom": "18.2.5",
     "@types/redux-logger": "3.0.9",
     "redux-logger": "3.0.6",
-    "typescript": "5.1.3"
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.2",
+    "redux-mock-store": "^1.5.4",
+    "typescript": "^5.1.3"
   }
 }
