--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "react-redux": "8.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
     "@types/redux-logger": "3.0.9",
-    "redux-logger": "3.0.6",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.2",
+    "redux-logger": "3.0.6",
     "redux-mock-store": "^1.5.4",
     "typescript": "^5.1.3"
   }
