--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
