--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "1.9.5",
     "next": "latest",
     "react": "18.2.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.2",
+    "prisma": "^5.8.1",
     "redux-logger": "3.0.6",
     "redux-mock-store": "^1.5.4",
     "typescript": "^5.1.3"
