--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start",
     "test": "jest"
   },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "1.9.5",
