--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prisma": "^5.8.1",
     "redux-logger": "3.0.6",
     "redux-mock-store": "^1.5.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.3"
   }
 }
