--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.2.1",
     "@types/node": "20.3.1",
@@ -28,6 +29,7 @@
     "@types/react-dom": "18.2.5",
     "@types/redux-logger": "3.0.9",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "autoprefixer": "^10.4.18",
     "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
@@ -41,10 +43,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.7.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.2",
     "prisma": "^5.9.1",
     "redux-logger": "3.0.6",
     "redux-mock-store": "^1.5.4",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.1.3"
   }
